changed swagger docs and param names
