# src/routes/survey.routes.js
@@ -1,7 +1,7 @@
 const express = require('express')
 const router = express.Router()
 
-const surveyController = require('../controllers/survey.controller')
+const controller = require('../controllers/survey.controller')
 const getSurveyById = require('../middleware/survey/getSurveyById')
 const createSurveyRequest = require('../middleware/survey/createSurveyRequest')
 const updateSurveyRequest = require('../middleware/survey/updateSurveyRequest')
@@ -9,17 +9,17 @@ const updateSurveyRequest = require('../middleware/survey/updateSurveyRequest')
 // Get all
 router.get('/', (req, res) => {
     // #swagger.tags = ['Survey']
-    // #swagger.description = 'Get all surveys in database.'
-	surveyController.index(req, res)
+    // #swagger.description = 'Get all surveys'
+	controller.index(req, res)
 	// #swagger.responses[200] = {schema:[{$ref:"#/definitions/Survey"}]}
 })
 
 // Get one
-router.get('/:id', getSurveyById, async (req, res) => {
+router.get('/:survey', getSurveyById, async (req, res) => {
     // #swagger.tags = ['Survey']
-    // #swagger.description = 'Get survey by ID.'
-    // #swagger.parameters['id'] = {description: "ID of the survey"}
-	surveyController.show(req, res)
+    // #swagger.description = 'Get survey by ID'
+    // #swagger.parameters['survey'] = {description: "ID of the survey"}
+	controller.show(req, res)
     // #swagger.responses[200] = {schema:{$ref:"#/definitions/Survey"}}
 })
 
@@ -32,31 +32,32 @@ router.get('/:survey/responses', getSurveyById, async (req, res) => {
     // #swagger.responses[200] = {schema:[{$ref:"#/definitions/Response"}]}
 })
 
+
 // Create one
 router.post('/', createSurveyRequest, async (req, res) => {
     // #swagger.tags = ['Survey']
     // #swagger.description = 'Create survey.'
     // #swagger.parameters['survey'] = {in:'body',schema:{$ref:"#/definitions/AddSurvey"}}
-	surveyController.store(req, res)
+	controller.store(req, res)
 	// #swagger.responses[201] = {schema:{$ref:"#/definitions/Survey"}}
 })
 
 // Updating one
-router.patch('/:id', getSurveyById, updateSurveyRequest, async (req, res) => {
+router.patch('/:survey', getSurveyById, updateSurveyRequest, async (req, res) => {
     // #swagger.tags = ['Survey']
-    // #swagger.description = 'Update survey by ID.'
-    // #swagger.parameters['id'] = {description: "ID of the survey"}
+    // #swagger.description = 'Update survey by ID'
+    // #swagger.parameters['survey'] = {description: "ID of the survey"}
     // #swagger.parameters['survey'] = {in:'body',schema:{$ref:"#/definitions/AddSurvey"}}
-	surveyController.update(req, res)
+	controller.update(req, res)
 	// #swagger.responses[200] = {schema:{$ref:"#/definitions/Survey"}}
 })
 
 // Deleting one
-router.delete('/:id', getSurveyById, async (req, res) => {
+router.delete('/:survey', getSurveyById, async (req, res) => {
     // #swagger.tags = ['Survey']
-    // #swagger.description = 'Delete survey by ID.'
-    // #swagger.parameters['id'] = {description: "ID of the survey"}
-	surveyController.destroy(req, res)
+    // #swagger.description = 'Delete survey by ID'
+    // #swagger.parameters['survey'] = {description: "ID of the survey"}
+	controller.destroy(req, res)
 	// #swagger.responses[204]
 })
 
